More CI/CD fixing.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
         curl -sLO https://raw.githubusercontent.com/clj-kondo/clj-kondo/master/script/install-clj-kondo
         chmod +x install-clj-kondo
         ./install-clj-kondo
-        ./clj-kondo --lint src test
+        clj-kondo --lint src test
 
     - name: Generate test report
       if: matrix.os == 'ubuntu-latest' && matrix.java == '17' && matrix.clojure == '1.11.1'
