--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,14 +75,16 @@ jobs:
 
     - name: Generate test report
       if: matrix.os == 'ubuntu-latest' && matrix.java == '17' && matrix.clojure == '1.11.1'
-      run: clojure -M:test --reporter junit --output-file target/test-results.xml
+      run: |
+        mkdir -p target
+        clojure -M:test > target/test-results.txt 2>&1 || true
 
     - name: Upload test results
       if: matrix.os == 'ubuntu-latest' && matrix.java == '17' && matrix.clojure == '1.11.1'
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: target/test-results.xml
+        path: target/test-results.txt
 
   build:
     name: Build JAR
