--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,6 +196,8 @@ jobs:
           ${{ runner.os }}-clojure-
 
     - name: Run nvd-clojure security scan
+      env:
+        NVD_API_TOKEN: ${{ secrets.NVD_API_KEY }}
       run: |
         clojure -Ttools install nvd-clojure/nvd-clojure '{:mvn/version "RELEASE"}' :as nvd
         clojure -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
